# mono

./: .dockerignore  .gitattributes  .gitignore  BUILD.bazel  Dockerfile  Makefile  README.md  WORKSPACE  buf.yaml  generate.go  go.mod  go.sum  skaffold.authd.yaml  skaffold.earbug.yaml  skaffold.paste.yaml  skaffold.w16.yaml  skaffold.yaml
.buildkite/: build.yaml  latestgo.yaml  pipeline.yaml
apis/: buf.gen.yaml  generate.go
auth/: skaffold.yaml
auth/authext/: check.go  server.go
auth/authnb/: server.go  session.go  user_auth.go
auth/authnbpb/: authnbpb.pb.go  authnbpb.proto  authnbpb_grpc.pb.go
auth/authnf/: handler.go  server.go
blog/: cloudbuild.yaml  main.go
blog/blog/: 12020-10-19-zero-trust-networking-products.md  12021-07-21-background-auth.md  12021-07-27-maddy-email.md  12021-08-01-certificate-transparency-at-work.md  12021-08-07-json-schema-openapi-kubernetes-crd.md  12021-08-07-json-schema-openapi-kubernetes-crd.yaml  12021-08-08-k8s-lifecycle-probes.md  12021-08-15-prometheus-alertmanager-end2end-delay.md  12021-08-22-job-10-months.md  12021-08-23-jenkins-github-push.md  12021-08-26-k8s-sidecar.md  12021-08-27-gcs-access-control.md  12021-08-28-cli-regex-notes.md  12021-09-04-whats-in-a-container-image.md  12021-09-05-buildkite-first-impressions.md  12021-09-06-kubelet-containerd-standalone.md  12021-10-06-opentelemtry-data-model.md  12021-10-07-kubernetes-metrics.md  12021-11-16-manual-hetzner-arch-linux.md  12021-11-16-server-reset.md  12021-11-18-ssh-certificates.md
ci/: Dockerfile  Dockerfile.buildkit  Dockerfile.ko
ci/cloudbuild/: vanity.yaml  w16.yaml
cmd/blog/: blog.service  main.go
cmd/earbug/: earbug.service  main.go
cmd/ghdefaults/: ghdefaults.service  main.go
cmd/go.seankhliao.com/: cloudbuild.yaml  main.go
cmd/paste/: main.go  paste.service
cmd/seankhliao.com/: cloudbuild.yaml  main.go
cmd/singlepage/: main.go  singlepage@.service
cmd/vanity/: main.go  vanity.service
content/: content.go
content/authn/: login.md  user.md
content/medea/: index.md
content/medea.seankhliao.com/: index.md
content/paste/: paste.html  paste.md
content/paste.seankhliao.com/: index.md
content/seankhliao.com/: index.md
content/stylesheet/: index.md
content/vanity/: index.md
content/w16/: index.md
cue/: .gitignore  envoy.cue
cue/terraform/: export_tool.cue
data/fin/: fin.prototext
earbug/: main.go
earbug/kustomize/: deployment.k8s.yaml  kustomization.yaml
go/base20/: BUILD.bazel
go/cmd/archrepod/: BUILD.bazel  README.md  doc.go  main.go
go/cmd/feedagg/: BUILD.bazel  README.md  doc.go  main.go
go/cmd/fin/: BUILD.bazel  README.md  doc.go  main.go
go/cmd/ghdefaults/: BUILD.bazel  README.md  doc.go  main.go
go/cmd/htpasswd/: BUILD.bazel  README.md  doc.go  main.go
go/cmd/mirrorrank/: BUILD.bazel  README.md  doc.go  main.go
go/cmd/paste/: BUILD.bazel  README.md  doc.go  main.go
go/cmd/singlepage/: BUILD.bazel  README.md  doc.go  main.go
go/cmd/t/: BUILD.bazel  README.md  doc.go
go/cmd/vanity/: BUILD.bazel  README.md  doc.go  main.go
go/cmd/w16/: BUILD.bazel  README.md  doc.go  main.go
go/cmd/webrender/: BUILD.bazel  README.md  doc.go  main.go
go/internal/archrepo/server/: BUILD.bazel  server.go
go/internal/feedagg/: BUILD.bazel  config.go  feed.go  feedagg.go  sqlite.go
go/internal/fin/run/summary/: BUILD.bazel  summary.go
go/internal/fin/store/: BUILD.bazel
go/internal/ghdefaults/: BUILD.bazel  ghdefaults.go
go/internal/paste/: BUILD.bazel  body.html  paste.go  style.css
go/internal/w16/picture/: BUILD.bazel
go/internal/w16/server/: BUILD.bazel  server.go
go/internal/w16/static/: BUILD.bazel
go/internal/w16/static/root/: 404.html  sitemap.txt  terms.html
go/internal/w16/static/root/blog/: 12019-05-23-a-blog.html  12019-05-24-this-blog.html  12019-05-28-blog-sub-home.html  12019-05-29-trust-the-rabbit-hole.html  12019-06-01-cloud-build-kaniko.html  12019-06-02-notes-20190602.html  12019-06-03-todo-list.html  12019-06-04-cloudbuild-arch-pkgbuild.html  12019-06-05-inbox-zero.html  12019-06-06-notes-git.html  12019-06-07-traefik-v2-on-k8s.html  12019-06-08-cube-uhhm-nates.html  12019-06-09-cloudbuild-yaml.html  12019-06-10-grpc-web-2019.html  12019-06-11-social-media-messaging.html  12019-06-12-benchmark-cloudbuild.html  12019-06-18-license-to-hack.html  12019-06-19-micro-boilerplate.html  12019-06-20-privacy-policy.html  12019-06-21-authnz.html  12019-06-23-kustomize-all-the-things.html  12019-06-24-benchmark-js-compiler.html  12019-06-25-k8s-network-ingress.html  12019-06-26-go-dialogflow-fulfillment.html  12019-07-04-service-ui.html  12019-07-08-cloudbuild-git.html  12019-08-05-go-module-versioning.html  12019-08-07-custom-email.html  12019-08-10-go-vanity-imports.html  12019-08-31-github-actions-beta.html  12019-09-04-eduroam.html  12019-09-14-eduroam-iwd.html  12019-09-20-go-string-rune-byte.html  12019-09-21-go-reproducible-builds.html  12019-10-06-github-actions-action.html  12019-10-07-reinstall-archlinux.html  12019-10-08-traefik-v2-kubernetescrd-tls.html  12019-10-16-standalone-coredns.html  12019-10-17-cloudbuild-github-app.html  12019-10-30-reinstall-arch-v2.html  (+208 more)
go/internal/w16/static/root/draft/: 12019-06-13-wanderlust.html  12019-06-14-minimalism.html  12019-06-15-biases.html  12019-06-22-gift-giving.html  12020-10-15-conversation-styles.html  12021-02-06-build-operate-buy.html  12021-07-01-cloud-work-trackers.html  12021-07-02-self-hosted-work-trackers.html  12021-07-03-distributed-work-trackers.html  go-mod-errors.html  netherlands.html  role-models.html  timeline.html
go/pacmandb/: BUILD.bazel  doc.go
go/render/: BUILD.bazel  layout.tpl  render.go
go/webserver/: BUILD.bazel  o11y.go  webserver.go
go/webserver/stdlog/: BUILD.bazel
internal/blog/: blog.go  redirect.go  render.go
monolith/: monolith.go  run.go
pkgbuild/: .gitignore  age.recipients
proto/: buf.yaml  generate.go
proto/seankhliao/fin/v1alpha1/: BUILD.bazel  fin.pb.go  fin.proto
static/: generate.go  static.go
tools/: tools.go
vanity/: cloudbuild.yaml  main.go
(+994 files in other folders)
