load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "pacmandb",
    srcs = [
        "db.go",
        "doc.go",
        "pkginfo.go",
    ],
    importpath = "go.seankhliao.com/mono/go/pacmandb",
    visibility = ["//visibility:public"],
    deps = ["@com_github_klauspost_compress//zstd"],
)
