load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "render",
    srcs = ["render.go"],
    embedsrcs = ["layout.tpl"],
    importpath = "go.seankhliao.com/mono/go/render",
    visibility = ["//visibility:public"],
    deps = [
        "//go/internal/w16/picture",
        "@com_github_tdewolff_minify_v2//:minify",
        "@com_github_tdewolff_minify_v2//css",
        "@com_github_tdewolff_minify_v2//html",
        "@com_github_tdewolff_minify_v2//js",
        "@com_github_tdewolff_minify_v2//svg",
        "@com_github_yuin_goldmark//:goldmark",
        "@com_github_yuin_goldmark//extension",
        "@com_github_yuin_goldmark//parser",
        "@com_github_yuin_goldmark//renderer/html",
        "@com_github_yuin_goldmark_meta//:goldmark-meta",
        "@io_k8s_sigs_yaml//:yaml",
    ],
)
