load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "webserver",
    srcs = [
        "o11y.go",
        "webserver.go",
    ],
    importpath = "go.seankhliao.com/mono/go/webserver",
    visibility = ["//visibility:public"],
    deps = [
        "//go/webserver/stdlog",
        "@com_github_go_logr_logr//:logr",
        "@io_k8s_klog_v2//klogr",
        "@io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp//:otelhttp",
        "@io_opentelemetry_go_contrib_propagators//jaeger",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel//propagation",
        "@io_opentelemetry_go_otel//semconv/v1.4.0:v1_4_0",
        "@io_opentelemetry_go_otel_exporters_otlp_otlpmetric//:otlpmetric",
        "@io_opentelemetry_go_otel_exporters_otlp_otlpmetric_otlpmetricgrpc//:otlpmetricgrpc",
        "@io_opentelemetry_go_otel_exporters_otlp_otlptrace//:otlptrace",
        "@io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc//:otlptracegrpc",
        "@io_opentelemetry_go_otel_metric//global",
        "@io_opentelemetry_go_otel_sdk//resource",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@io_opentelemetry_go_otel_sdk_metric//controller/basic",
        "@io_opentelemetry_go_otel_sdk_metric//processor/basic",
        "@io_opentelemetry_go_otel_sdk_metric//selector/simple",
    ],
)
