load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "archrepod_lib",
    srcs = [
        "doc.go",
        "main.go",
    ],
    importpath = "go.seankhliao.com/mono/go/cmd/archrepod",
    visibility = ["//visibility:private"],
    deps = [
        "//go/internal/archrepo/server",
        "//go/webserver",
    ],
)

go_binary(
    name = "archrepod",
    embed = [":archrepod_lib"],
    visibility = ["//visibility:public"],
)
