load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "fin_lib",
    srcs = [
        "doc.go",
        "main.go",
    ],
    importpath = "go.seankhliao.com/mono/go/cmd/fin",
    visibility = ["//visibility:private"],
    deps = [
        "//go/internal/fin/run",
        "//go/internal/fin/run/importcsv",
        "//go/internal/fin/run/summary",
    ],
)

go_binary(
    name = "fin",
    embed = [":fin_lib"],
    visibility = ["//visibility:public"],
)
