load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ghdefaults_lib",
    srcs = [
        "doc.go",
        "main.go",
    ],
    importpath = "go.seankhliao.com/mono/go/cmd/ghdefaults",
    visibility = ["//visibility:private"],
    deps = [
        "//go/internal/ghdefaults",
        "//go/webserver",
    ],
)

go_binary(
    name = "ghdefaults",
    embed = [":ghdefaults_lib"],
    visibility = ["//visibility:public"],
    pure = "on"
)

load("@io_bazel_rules_docker//container:container.bzl", "container_image")

container_image(
    name = "image",
    base = "@go_image_static//image",
    files = [":ghdefaults"],
    entrypoint = ["/ghdefaults"],
)


load("@io_bazel_rules_docker//container:container.bzl", "container_push")

container_push(
    name = "push",
    format = "OCI",
    image = ":image",
    registry = "europe-north1-docker.pkg.dev",
    repository = "com-seankhliao/kluster/ghdefaults",
    skip_unchanged_digest = True,
)
