load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "htpasswd_lib",
    srcs = [
        "doc.go",
        "main.go",
    ],
    importpath = "go.seankhliao.com/mono/go/cmd/htpasswd",
    visibility = ["//visibility:private"],
    deps = ["@org_golang_x_crypto//bcrypt"],
)

go_binary(
    name = "htpasswd",
    embed = [":htpasswd_lib"],
    visibility = ["//visibility:public"],
)
