load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "mirrorrank_lib",
    srcs = [
        "doc.go",
        "main.go",
    ],
    importpath = "go.seankhliao.com/mono/go/cmd/mirrorrank",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "mirrorrank",
    embed = [":mirrorrank_lib"],
    visibility = ["//visibility:public"],
)
