load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "paste_lib",
    srcs = [
        "doc.go",
        "main.go",
    ],
    importpath = "go.seankhliao.com/mono/go/cmd/paste",
    visibility = ["//visibility:private"],
    deps = [
        "//go/internal/paste",
        "//go/webserver",
    ],
)

go_binary(
    name = "paste",
    embed = [":paste_lib"],
    visibility = ["//visibility:public"],
    pure = "on"
)

load("@io_bazel_rules_docker//container:container.bzl", "container_image")

container_image(
    name = "image",
    base = "@go_image_static//image",
    files = [":paste"],
    entrypoint = ["/paste"],
)


load("@io_bazel_rules_docker//container:container.bzl", "container_push")

container_push(
    name = "push",
    format = "OCI",
    image = ":image",
    registry = "europe-north1-docker.pkg.dev",
    repository = "com-seankhliao/kluster/paste",
    skip_unchanged_digest = True,
)
