load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "singlepage_lib",
    srcs = [
        "doc.go",
        "main.go",
    ],
    importpath = "go.seankhliao.com/mono/go/cmd/singlepage",
    visibility = ["//visibility:private"],
    deps = [
        "//go/render",
        "//go/webserver",
        "@com_github_go_logr_logr//:logr",
        "@io_opentelemetry_go_otel//:otel",
    ],
)

go_binary(
    name = "singlepage",
    embed = [":singlepage_lib"],
    visibility = ["//visibility:public"],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "go_image",
    binary = ":singlepage",
    pure = "on",
)

load("@io_bazel_rules_docker//container:container.bzl", "container_push")

container_push(
    name = "push",
    format = "OCI",
    image = ":go_image",
    registry = "europe-north1-docker.pkg.dev",
    repository = "com-seankhliao/kluster/singlepage",
    skip_unchanged_digest = True,
)
