load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "t_lib",
    srcs = [
        "doc.go",
        "main.go",
    ],
    importpath = "go.seankhliao.com/mono/go/cmd/t",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "t",
    embed = [":t_lib"],
    visibility = ["//visibility:public"],
)
