load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "vanity_lib",
    srcs = [
        "doc.go",
        "main.go",
    ],
    embedsrcs = ["index.gohtml"],
    importpath = "go.seankhliao.com/mono/go/cmd/vanity",
    visibility = ["//visibility:private"],
    deps = [
        "//go/webserver",
        "@com_github_go_logr_logr//:logr",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel_trace//:trace",
    ],
)

go_binary(
    name = "vanity",
    embed = [":vanity_lib"],
    visibility = ["//visibility:public"],
    pure = "on"
)

load("@io_bazel_rules_docker//container:container.bzl", "container_image")

container_image(
    name = "image",
    base = "@go_image_static//image",
    files = [":vanity"],
    entrypoint = ["/vanity"],
)


load("@io_bazel_rules_docker//container:container.bzl", "container_push")

container_push(
    name = "push",
    format = "OCI",
    image = ":image",
    registry = "europe-north1-docker.pkg.dev",
    repository = "com-seankhliao/kluster/vanity",
    skip_unchanged_digest = True,
)
