load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "w16_lib",
    srcs = [
        "doc.go",
        "main.go",
    ],
    importpath = "go.seankhliao.com/mono/go/cmd/w16",
    visibility = ["//visibility:private"],
    deps = [
        "//go/internal/w16/server",
        "//go/webserver",
    ],
)

go_binary(
    name = "w16",
    embed = [":w16_lib"],
    visibility = ["//visibility:public"],
    pure = "on"
)

load("@io_bazel_rules_docker//container:container.bzl", "container_image")

container_image(
    name = "image",
    base = "@go_image_static//image",
    files = [":w16"],
    entrypoint = ["/w16"],
)


load("@io_bazel_rules_docker//container:container.bzl", "container_push")

container_push(
    name = "push",
    format = "OCI",
    image = ":image",
    registry = "europe-north1-docker.pkg.dev",
    repository = "com-seankhliao/kluster/w16",
    skip_unchanged_digest = True,
)
