load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "webrender_lib",
    srcs = [
        "doc.go",
        "main.go",
    ],
    importpath = "go.seankhliao.com/mono/go/cmd/webrender",
    visibility = ["//visibility:private"],
    deps = [
        "//go/internal/w16/process",
        "@io_k8s_klog_v2//klogr",
    ],
)

go_binary(
    name = "webrender",
    embed = [":webrender_lib"],
    visibility = ["//visibility:public"],
)
