load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "ghdefaults",
    srcs = ["ghdefaults.go"],
    importpath = "go.seankhliao.com/mono/go/internal/ghdefaults",
    visibility = ["//go:__subpackages__"],
    deps = [
        "@com_github_bradleyfalzon_ghinstallation//:ghinstallation",
        "@com_github_go_logr_logr//:logr",
        "@com_github_google_go_github_v35//github",
        "@io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp//:otelhttp",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_trace//:trace",
    ],
)
