load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "paste",
    srcs = ["paste.go"],
    embedsrcs = [
        "body.html",
        "style.css",
    ],
    importpath = "go.seankhliao.com/mono/go/internal/paste",
    visibility = ["//go:__subpackages__"],
    deps = [
        "//go/base20",
        "//go/render",
        "@com_github_go_logr_logr//:logr",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel_trace//:trace",
    ],
)
