load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "store",
    srcs = ["store.go"],
    importpath = "go.seankhliao.com/mono/go/internal/fin/store",
    visibility = ["//go:__subpackages__"],
    deps = [
        "//proto/seankhliao/fin/v1alpha1",
        "@org_golang_google_protobuf//encoding/prototext",
    ],
)
