load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "static",
    srcs = ["static.go"],
    embedsrcs = [
        "root/.well-known/security.txt",
        "root/404.html",
        "root/blog/12019-05-23-a-blog.html",
        "root/blog/12019-05-24-this-blog.html",
        "root/blog/12019-05-28-blog-sub-home.html",
        "root/blog/12019-05-29-trust-the-rabbit-hole.html",
        "root/blog/12019-06-01-cloud-build-kaniko.html",
        "root/blog/12019-06-02-notes-20190602.html",
        "root/blog/12019-06-03-todo-list.html",
        "root/blog/12019-06-04-cloudbuild-arch-pkgbuild.html",
        "root/blog/12019-06-05-inbox-zero.html",
        "root/blog/12019-06-06-notes-git.html",
        "root/blog/12019-06-07-traefik-v2-on-k8s.html",
        "root/blog/12019-06-08-cube-uhhm-nates.html",
        "root/blog/12019-06-09-cloudbuild-yaml.html",
        "root/blog/12019-06-10-grpc-web-2019.html",
        "root/blog/12019-06-11-social-media-messaging.html",
        "root/blog/12019-06-12-benchmark-cloudbuild.html",
        "root/blog/12019-06-18-license-to-hack.html",
        "root/blog/12019-06-19-micro-boilerplate.html",
        "root/blog/12019-06-20-privacy-policy.html",
        "root/blog/12019-06-21-authnz.html",
        "root/blog/12019-06-23-kustomize-all-the-things.html",
        "root/blog/12019-06-24-benchmark-js-compiler.html",
        "root/blog/12019-06-25-k8s-network-ingress.html",
        "root/blog/12019-06-26-go-dialogflow-fulfillment.html",
        "root/blog/12019-07-04-service-ui.html",
        "root/blog/12019-07-08-cloudbuild-git.html",
        "root/blog/12019-08-05-go-module-versioning.html",
        "root/blog/12019-08-07-custom-email.html",
        "root/blog/12019-08-10-go-vanity-imports.html",
        "root/blog/12019-08-31-github-actions-beta.html",
        "root/blog/12019-09-04-eduroam.html",
        "root/blog/12019-09-14-eduroam-iwd.html",
        "root/blog/12019-09-20-go-string-rune-byte.html",
        "root/blog/12019-09-21-go-reproducible-builds.html",
        "root/blog/12019-10-06-github-actions-action.html",
        "root/blog/12019-10-07-reinstall-archlinux.html",
        "root/blog/12019-10-08-traefik-v2-kubernetescrd-tls.html",
        "root/blog/12019-10-16-standalone-coredns.html",
        "root/blog/12019-10-17-cloudbuild-github-app.html",
        "root/blog/12019-10-30-reinstall-arch-v2.html",
        "root/blog/12019-11-02-reinstall-arch-v3.html",
        "root/blog/12019-11-03-archlinux-custom-repo.html",
        "root/blog/12019-11-23-custom-initramfs.html",
        "root/blog/12019-12-24-experiments-with-sxg.html",
        "root/blog/12019-12-26-chaos-communication-congress-0.html",
        "root/blog/12019-12-27-chaos-communication-congress-1.html",
        "root/blog/12019-12-28-chaos-communication-congress-2.html",
        "root/blog/12019-12-29-chaos-communication-congress-3.html",
        "root/blog/12019-12-30-chaos-communication-congress-4.html",
        "root/blog/12020-01-03-go-module-stats.html",
        "root/blog/12020-01-09-signing-and-encrypting.html",
        "root/blog/12020-01-12-ssh-u2f.html",
        "root/blog/12020-02-02-fosdem.html",
        "root/blog/12020-03-07-latex-notes.html",
        "root/blog/12020-03-08-wpa-eap-tls.html",
        "root/blog/12020-03-13-pomerium-traefik-auth-proxy.html",
        "root/blog/12020-03-14-wireguard-systemd.html",
        "root/blog/12020-03-28-kubernetes-cluster-19-p1.html",
        "root/blog/12020-03-29-kubernetes-cluster-19-p2.html",
        "root/blog/12020-03-30-kubernetes-cluster-19-p3.html",
        "root/blog/12020-03-31-wireguard-systemd-p2.html",
        "root/blog/12020-04-01-metrics-and-tracing.html",
        "root/blog/12020-04-05-iptables-notes.html",
        "root/blog/12020-04-06-nftables-notes.html",
        "root/blog/12020-04-12-go-structured-logging.html",
        "root/blog/12020-04-17-passwordless-sudo-u2f.html",
        "root/blog/12020-04-19-kubernetes-secrets.html",
        "root/blog/12020-04-28-tekton-pipelines.html",
        "root/blog/12020-04-29-irc-weechat.html",
        "root/blog/12020-04-30-wayback-machine.html",
        "root/blog/12020-05-01-lc-lang.html",
        "root/blog/12020-05-02-arch-reproducible-builds.html",
        "root/blog/12020-05-06-webauthn.html",
        "root/blog/12020-05-08-http-headers.html",
        "root/blog/12020-05-10-tar.html",
        "root/blog/12020-05-11-go-mod-stats.html",
        "root/blog/12020-05-14-osc-52.html",
        "root/blog/12020-05-15-spotify-codes.html",
        "root/blog/12020-05-16-permanently-backlogged-ideas.html",
        "root/blog/12020-05-21-static-site-hosts.html",
        "root/blog/12020-05-24-databases.html",
        "root/blog/12020-05-25-messaging-systems.html",
        "root/blog/12020-05-27-go-module-proxies.html",
        "root/blog/12020-06-07-bluetooth-headset.html",
        "root/blog/12020-06-20-named-data-networking.html",
        "root/blog/12020-06-21-TURN-proxy.html",
        "root/blog/12020-06-22-digitalocean-scam.html",
        "root/blog/12020-06-23-uva-sne.html",
        "root/blog/12020-07-03-ssh-login-failures.html",
        "root/blog/12020-07-04-reusing-tcp-ports.html",
        "root/blog/12020-07-05-hyped-blogging.html",
        "root/blog/12020-07-06-modern-cli-toolbox.html",
        "root/blog/12020-07-07-lua.html",
        "root/blog/12020-07-25-rsync-slashes.html",
        "root/blog/12020-07-26-email-date.html",
        "root/blog/12020-07-28-diff-tools.html",
        "root/blog/12020-07-29-terminal-dashboard.html",
        "root/blog/12020-07-30-go-modules-tldr.html",
        "root/blog/12020-07-31-protoc-gen-go-grpc.html",
        "root/blog/12020-08-01-frontend-thoughts.html",
        "root/blog/12020-08-02-reverse-proxies.html",
        "root/blog/12020-08-03-no-tofu-ssh.html",
        "root/blog/12020-08-04-loginctl-linger.html",
        "root/blog/12020-08-05-openssl-oneline-curve-certs.html",
        "root/blog/12020-08-06-updated-weechat.html",
        "root/blog/12020-08-07-ntu-im.html",
        "root/blog/12020-08-09-analytics-report.html",
        "root/blog/12020-08-11-go-opentelemetry.html",
        "root/blog/12020-09-04-container-runtime.html",
        "root/blog/12020-09-05-monad.html",
        "root/blog/12020-09-07-terraform-first-impressions.html",
        "root/blog/12020-09-08-base-n.html",
        "root/blog/12020-09-09-container-tools.html",
        "root/blog/12020-09-10-neovim-plugins.html",
        "root/blog/12020-09-11-neovim-init.lua.html",
        "root/blog/12020-09-12-exotic-shells.html",
        "root/blog/12020-09-13-service-authnz.html",
        "root/blog/12020-09-14-k8s-policy-enforment.html",
        "root/blog/12020-09-15-authnz-services.html",
        "root/blog/12020-09-16-traefik-backend-tls.html",
        "root/blog/12020-09-17-k8s-default-policies.html",
        "root/blog/12020-09-18-random-thoughts-yaml-conf.html",
        "root/blog/12020-09-19-json-unmarshal-hack.html",
        "root/blog/12020-09-20-k8s-go-dev-loop.html",
        "root/blog/12020-09-21-k8s-volume-perms.html",
        "root/blog/12020-09-23-k8s-clustered-apps.html",
        "root/blog/12020-09-24-gitattributes-age-encrypt.html",
        "root/blog/12020-09-28-notes-20200928.html",
        "root/blog/12020-09-29-benchmark-kaniko-go.html",
        "root/blog/12020-09-30-go-iterators.html",
        "root/blog/12020-10-01-go-channel-sync.html",
        "root/blog/12020-10-02-zsh-completion-basic.html",
        "root/blog/12020-10-03-go-list-patterns.html",
        "root/blog/12020-10-04-hetzner-arch-k8s.html",
        "root/blog/12020-10-05-slow-ipfs.html",
        "root/blog/12020-10-09-software-supply-chain-musings.html",
        "root/blog/12020-10-10-multiplexing-protocols.html",
        "root/blog/12020-10-11-logging-revisited.html",
        "root/blog/12020-10-12-proto-encoding.html",
        "root/blog/12020-10-13-cloudflare-for-ipv6.html",
        "root/blog/12020-10-14-tcp-over-wireguard.html",
        "root/blog/12020-10-16-terraform-second-impressions.html",
        "root/blog/12020-10-17-go-sql-qol.html",
        "root/blog/12020-10-18-foundations-of-cloud-native.html",
        "root/blog/12020-10-19-zero-trust-networking-products.html",
        "root/blog/12020-10-21-search-and-replace-maths.html",
        "root/blog/12020-10-22-renaming-files.html",
        "root/blog/12020-10-23-irc.html",
        "root/blog/12020-10-24-data-serialization.html",
        "root/blog/12020-10-25-how-many-package-managers.html",
        "root/blog/12020-10-27-squashed-git.html",
        "root/blog/12020-10-28-the-update-framework.html",
        "root/blog/12020-10-29-matrix-irc.html",
        "root/blog/12020-10-30-tldr-consensus.html",
        "root/blog/12020-10-31-git-signing-signify.html",
        "root/blog/12020-11-01-zsh-prompt.html",
        "root/blog/12020-11-02-gcp-https-cloudflare.html",
        "root/blog/12020-11-03-jekyll-hugo.html",
        "root/blog/12020-11-04-ircing.html",
        "root/blog/12020-11-07-arch-btrfs.html",
        "root/blog/12020-11-08-arch-dm-crypt-btrfs.html",
        "root/blog/12020-11-09-reinstall-arch-v4.html",
        "root/blog/12020-11-10-common-gateway-interface.html",
        "root/blog/12020-11-11-web-git.html",
        "root/blog/12020-11-12-git-filter-things.html",
        "root/blog/12020-11-13-public-data.html",
        "root/blog/12020-11-14-k8s-operator.html",
        "root/blog/12020-11-15-repo-metadata.html",
        "root/blog/12020-11-16-docker-build-secrets.html",
        "root/blog/12020-11-17-github-actions-revisited.html",
        "root/blog/12020-11-18-thoughts-on-systemd-homed.html",
        "root/blog/12020-11-19-more-cicd-systems.html",
        "root/blog/12020-11-20-k8s-rollouts.html",
        "root/blog/12020-11-21-kaniko.html",
        "root/blog/12020-11-22-k8s-gitops-secrets.html",
        "root/blog/12020-11-23-go-error-handling-proposals.html",
        "root/blog/12020-11-24-skopeo-copy.html",
        "root/blog/12020-12-01-ms-teams.html",
        "root/blog/12020-12-02-avoid-helm.html",
        "root/blog/12020-12-03-junior-sre-at-non-tech.html",
        "root/blog/12020-12-04-importing-terraform.html",
        "root/blog/12020-12-08-k8s-cluster-setup.html",
        "root/blog/12020-12-18-gh-actions-pr-title-fixer.html",
        "root/blog/12020-12-19-migrating-elasticcloud-clusters.html",
        "root/blog/12021-01-16-short-circuit-logic.html",
        "root/blog/12021-01-17-dayjob-agile-scrum.html",
        "root/blog/12021-01-18-what-do-you-need-in-k8s.html",
        "root/blog/12021-01-19-go-error-handling-musing.html",
        "root/blog/12021-01-21-cert-cli.html",
        "root/blog/12021-01-22-cloudflare-bot-management.html",
        "root/blog/12021-01-23-docker-buildx-caching.html",
        "root/blog/12021-01-27-4-months-at-job.html",
        "root/blog/12021-01-28-argocd-private-helm-gcs.html",
        "root/blog/12021-02-12-grafana-trace-to-log-to-trace.html",
        "root/blog/12021-02-12-otel-go-v0.16.0-tracing.html",
        "root/blog/12021-02-13-state-of-metrics-exemplars.html",
        "root/blog/12021-02-14-renovate-and-helm.html",
        "root/blog/12021-02-15-reading-otel-spec.html",
        "root/blog/12021-02-16-reading-smi-spec.html",
        "root/blog/12021-02-17-github-special-urls.html",
        "root/blog/12021-02-18-opinionated-k8s-deployment.html",
        "root/blog/12021-02-19-extracting-from-json.html",
        "root/blog/12021-02-20-go-plugins.html",
        "root/blog/12021-02-21-reading-openmetrics-spec.html",
        "root/blog/12021-02-27-go-private-doc-server.html",
        "root/blog/12021-02-28-k8s-labelling-reflections.html",
        "root/blog/12021-02-29-k8s-non-root-capabilities.html",
        "root/blog/12021-03-20-managing-k8s-manifests.html",
        "root/blog/12021-03-21-development-environment.html",
        "root/blog/12021-03-22-k8s-cluster-metrics.html",
        "root/blog/12021-03-27-ingress-nginx-opentracing.html",
        "root/blog/12021-03-29-plain-git-private-go-modules.html",
        "root/blog/12021-04-06-job-6-months.html",
        "root/blog/12021-04-07-hardened-systemd-service.html",
        "root/blog/12021-04-08-envoy-1-17-static.html",
        "root/blog/12021-04-09-go-structured-logging-error-key-values.html",
        "root/blog/12021-04-10-sharing-git-hooks.html",
        "root/blog/12021-04-12-go-mod-basics.html",
        "root/blog/12021-04-13-go-license-scanning.html",
        "root/blog/12021-04-14-choosing-colormaps.html",
        "root/blog/12021-04-17-dns-service-discovery.html",
        "root/blog/12021-04-24-hetzner-arch-k8s-cilium.html",
        "root/blog/12021-04-25-k8s-application-lifecycle-controllers.html",
        "root/blog/12021-04-26-istio-gateway-mtls.html",
        "root/blog/12021-04-29-go-private-modules-in-gitlab.html",
        "root/blog/12021-04-30-normalizing-k8s-manifests.html",
        "root/blog/12021-05-09-go-mod-vendor-non-go-things.html",
        "root/blog/12021-05-13-kubevirt-notes.html",
        "root/blog/12021-06-01-terraform-single-server.html",
        "root/blog/12021-06-02-nomad-questions.html",
        "root/blog/12021-06-03-job-8-months.html",
        "root/blog/12021-06-04-cicd-and-gitops.html",
        "root/blog/12021-06-10-contour-ipv6.html",
        "root/blog/12021-06-11-jool-nat64-coredns-dns64.html",
        "root/blog/12021-06-17-opentelemetry-collector-logs.html",
        "root/blog/12021-06-18-klog-output.html",
        "root/blog/12021-06-22-load-testing-tools.html",
        "root/blog/12021-06-23-xds-reading.html",
        "root/blog/12021-06-27-skaffold-kaniko-docker-caching.html",
        "root/blog/12021-07-04-tools-on-github-actions.html",
        "root/blog/12021-07-21-background-auth.html",
        "root/blog/index.html",
        "root/draft/12019-06-13-wanderlust.html",
        "root/draft/12019-06-14-minimalism.html",
        "root/draft/12019-06-15-biases.html",
        "root/draft/12019-06-16-moving.html",
        "root/draft/12019-06-17-personal-roadmap.html",
        "root/draft/12019-06-22-gift-giving.html",
        "root/draft/12020-01-01-identity-v2020.html",
        "root/draft/12020-08-08-emoji.html",
        "root/draft/12020-10-15-conversation-styles.html",
        "root/draft/12020-10-20-population-and-economy.html",
        "root/draft/12020-10-26-clothes.html",
        "root/draft/12021-02-06-build-operate-buy.html",
        "root/draft/12021-05-29-mobile-games-i-liked.html",
        "root/draft/12021-07-01-cloud-work-trackers.html",
        "root/draft/12021-07-02-self-hosted-work-trackers.html",
        "root/draft/12021-07-03-distributed-work-trackers.html",
        "root/draft/character-building-events.html",
        "root/draft/first-job.html",
        "root/draft/go-mod-errors.html",
        "root/draft/like.html",
        "root/draft/mem.html",
        "root/draft/netherlands.html",
        "root/draft/role-models.html",
        "root/draft/timeline.html",
        "root/favicon.ico",
        "root/humans.txt",
        "root/index.html",
        "root/manifest.json",
        "root/robots.txt",
        "root/sitemap.txt",
        "root/static/icon-192.png",
        "root/static/icon-512.png",
        "root/static/icon.svg",
        "root/static/inconsolata-400.woff2",
        "root/static/inconsolata-700.woff2",
        "root/static/inconsolata-var.woff2",
        "root/static/lora-400.woff2",
        "root/static/lora-700.woff2",
        "root/static/lora-var.woff2",
        "root/static/map.jpg",
        "root/static/map.png",
        "root/static/map.svg",
        "root/static/map.webp",
        "root/static/merged-analytics.jpg",
        "root/static/merged-analytics.png",
        "root/static/merged-analytics.webp",
        "root/static/web-vitals-1.1.0.js",
        "root/terms.html",
    ],
    importpath = "go.seankhliao.com/mono/go/internal/w16/static",
    visibility = ["//go:__subpackages__"],
)
